sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:16: error: value break is not a member of Unit
possible cause: maybe a semicolon is missing before `value break'?
			} break;
                          ^